--- a/src/components/movieList.css
+++ b/src/components/movieList.css
@@ -4,25 +4,24 @@
   
 .box {
     background: orange;
-    width: 266px;
-    height: 472px;
+    width: 240px;
+    height: 410px;
     margin: 10px;
     float: left;
 }
 
 .poster-title {
     width: 100%;
-    height: 30px;
-    text-align-last: center;
-    
+    height: 20px;
+    text-align-last: center;    
     color: #222;
 }
 
 .poster {
-    width: 256px;
-    height: 400px;
-    
-    border: 1px solid black;
+    width: 230px;
+    height: 340px;
+    margin: 5px;
+    /* border: 1px solid black; */
 }
 
 .poster-title-link {
